--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -87,7 +87,7 @@
       <input type="text" name="arrival" placeholder="Arrival" required>
       <input type="number" name="price" placeholder="price" required>
       <input type="text" name="day_time" placeholder="Time" required>
-      <input type="text" name="dates"  placeholder="Dates" required>
+      <input type="date" name="dates"  placeholder="Dates" required>
       <button type='submit' id="prices">Create price</button>
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
   </div> 
@@ -210,6 +210,35 @@
 
 </div>
 
+<!-- Footer -->
+<footer class="page-footer font-small mdb-color darken-4
+pt-4">
+
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!-- Call to action -->
+    <ul class="list-unstyled list-inline text-center py-2">
+      <li class="list-inline-item">
+        <h5 class="mb-1">Register, Book and get discount</h5>
+      </li>
+      <li class="list-inline-item">
+        <a href="#!" class="btn btn-outline-success btn-rounded waves-effect">Sign up!</a>
+      </li>
+    </ul>
+    <!-- Call to action -->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="#"> xycoders</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 <!-- <div id="myModal1" class="modal1">
 
