--- a/UI/pages/deskpay.html
+++ b/UI/pages/deskpay.html
@@ -44,12 +44,12 @@
 
 </nav>
 <!--/.Navbar-->
-<br/>
 <div class="contianer">
 
   <div class="conts mb-5">
-      <h1>Would do you pay Lipa na mpesa OR Cash </h1>
-
+      <h2 class="font-weight-bold" style="color: #00c851!important; font-weight: 600; font-family: Georgia, 'Times New Roman', Times, serif;">Would do you pay Lipa na mpesa OR Cash</h2>
+<hr>
+<br/><br/>
     <div class="row">
         <div class="col-sm-6">
         <h3 id="reg"></h3>
@@ -146,7 +146,35 @@
         }
     }
 </script>
+<!-- Footer -->
+<footer class="page-footer font-small mdb-color darken-4
+pt-4">
 
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!-- Call to action -->
+    <ul class="list-unstyled list-inline text-center py-2">
+      <li class="list-inline-item">
+        <h5 class="mb-1">Register, Book and get discount</h5>
+      </li>
+      <li class="list-inline-item">
+        <a href="#!" class="btn btn-outline-success btn-rounded waves-effect">Sign up!</a>
+      </li>
+    </ul>
+    <!-- Call to action -->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="#"> xycoders</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
 <script src="../js/deskpay.js"></script>
 <script src="../js/cashdesk.js"></script>
