--- a/UI/pages/pricing.html
+++ b/UI/pages/pricing.html
@@ -33,7 +33,7 @@
        </li>
       
        <li class="nav-item" style="color: #ffffff; font-weight: 500;">
-         <a class="nav-link" href="./UI/pages/pricing.html">Pricing</a>
+         <a class="nav-link" href="pricing.html">Pricing</a>
        </li>
      </ul>
      <!-- Links -->
@@ -49,16 +49,18 @@
    <!-- Collapsible content -->
  </nav>
  <!--/.Navbar-->
-<br><br><br>
+  <br/><br/><br/><br/>
+
  <section class="dis">
    
 <div class="container">
-    <h2 class=" h3 text-center" style="color: #FF8800
+    <h2 class=" h3 text-center" style="color:#00c851;
     ;  font-size: 2em; font-weight: 600;">OUR PRICING</h2>
     <br>
     <div id="shows"></div>
 </div>
 </section>
+
 <!-- Footer -->
 <footer class="page-footer font-small mdb-color darken-4
 pt-4">
