--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -87,7 +87,7 @@
       <input type="text" name="arrival" placeholder="Arrival" required>
       <input type="number" name="price" placeholder="price" required>
       <input type="text" name="day_time" placeholder="Time" required>
-      <input type="date" name="dates"  placeholder="Dates" required>
+      <input type="date" name="dates" placeholder="Date" autofocus="autofocus" required="required" class="input pass"/>
       <button type='submit' id="prices">Create price</button>
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
   </div> 
