Add create employee file and modify js

--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -88,6 +88,7 @@
       <input type="number" name="price" placeholder="price" required>
       <input type="text" name="day_time" placeholder="Time" required>
       <input type="date" name="dates" placeholder="Date" autofocus="autofocus" required="required" class="input pass"/>
+      <input type="text" name="driver" placeholder="Driver" required>
       <button type='submit' id="prices">Create price</button>
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
   </div> 
