--- a/UI/pages/printdata.html
+++ b/UI/pages/printdata.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<link href="responsive-tables.css" type="text/css" media="screen" rel="stylesheet"/>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
 <link href="../css/style.css" rel="stylesheet">
@@ -90,6 +91,8 @@
     
   </div>
 
+
+
     <script>
       var modal6 = document.getElementById('myModal6');
       var btn6 = document.getElementById("myBtn6");
@@ -147,6 +150,8 @@ pt-4">
 <script src="../js/print.min.js"></script>
 
 <script src="../js/script.js"></script>
+<script type="text/javascript" src="responsive-tables.js"></script>
+
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
